add icons and launch images for iPad Support

--- a/KXOJ/WJRS-Info.plist
+++ b/KXOJ/WJRS-Info.plist
@@ -37,6 +37,8 @@
 	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
